# assignment13

./: .travis.yml  Manifest.toml  Project.toml  README.md  environment.yml
.github/workflows/: main.yml
src/: CMakeLists.txt  assignment13.jl
test/: test.py  test_gauss_quad_10.jl  test_gauss_quad_5.jl
